[package]
edition = "2024"
name = "aqi"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["defmt", "embassy", "esp32c3"] }
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-graphics = "0.8.0"
esp-backtrace = { version = "0.19.0", features = [
    "defmt",
    "esp32c3",
    "panic-handler",
] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32c3"] }
heapless = "0.9.3"
pmsa003i = { version = "0.1.11", features = ["aqi", "async"] }
ssd1306 = { version = "0.10.0", features = ["async", "graphics"] }
static_cell = "2.1.1"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2     # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'

[lib]
name = "lib"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "aqi"
path = "src/bin/main.rs"
test = false
doctest = false
bench = false